:recycle: [#71] Fix help_texts and update verzoek_informatie_object
